# web_homework10-Django-

./: .gitignore  Dockerfile  Procfile  README.md  Spacefile  pyproject.toml  requirements.txt
quotes/quoteapp/: admin.py  forms.py  models.py  urls.py  views.py
quotes/quoteapp/migrations/: 0001_initial.py
quotes/quoteapp/static/quoteapp/: bootstrap.min.css  style.css
quotes/quoteapp/templates/quoteapp/: add_author.html  add_quote.html  author.html  base.html  index.html  search_results.html
quotes/quotes/: settings.py  urls.py  wsgi.py
quotes/users/: forms.py  urls.py  views.py
quotes/users/migrations/: 0001_initial.py
quotes/users/templates/users/: login.html  logout.html  password_reset.html  password_reset_confirm.html  password_reset_done.html  profile.html  register.html
quotes/utils/: authors.json  migration.py  quotes.json  quotes_to_mongo.py
